@@ -1,3 +1,7 @@
+HEAD
+        + more resilent EBox::MailVdomain::setUserAccount, now we don't
+	abort if it exists already a user maildir, instead we move it to a
+	backup directory
 1.3.6
         + now you can specify a port for the smarthost (if not specified
 	the default port continues to be 25)
